--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <option class="opts">Interface utilisateur web dynamique</option>
                         <option class="opts">Gestion de contenu ou e-commerce</option>
                     </select>
-                    <select id="choix3">
+                    <select id="choix3" class="choix3">
                         <option class="opts">-</option>
                         <option class="opts">Développement Back-End</option>
                         <option class="opts">Bases de données</option>
@@ -234,12 +234,12 @@
                                 </textarea>
                             </div>
                             
-                            <input id="com" type="button" value="Envoyer">
+                            <input id="com" class="com" type="button" value="Envoyer">
                             <div id="comBox" class="comBox"></div>
                         </form>
                 </article>
                 <footer>
-                    <section id="centre">
+                    <section id="centre" class="centre">
                         <p>Design & Built by Mickaël Rougé, 2022.</p>
                     </section>
                 </footer>
