--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                     <div id="txtBase" class="txtBase">
                         <h3>Créer une Base de données</h3>
-                            <img src="images/sqlBase.png" id ="illuBig" alt="Data">
+                            <img src="images/sqlbase.png" id ="illuBig" alt="Data">
                         <p class="txtDesc">À partir d’une demande client nécessitant le stockage de données, organiser les données et définir un 
                             schéma physique. A l’aide d’un SGBD, écrire et exécuter le script de création de la base de données, 
                             insérer les données de test, définir les droits d'utilisation et prévoir les procédures de sauvegarde et de 
