--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <title>My Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
@@ -26,6 +27,7 @@
             </aside>
             <div class="droite">
                 <header>
+                    <div class="blocVide"></div>
                     <h1 id="hautDePage">Developpeur Web & Web Mobile</h1>
                     <div id="blocSwitch"> 
                         <p id="txtBtn">light mode</p>
@@ -82,7 +84,7 @@
                             <section id="blocCv"></section>
                             <div class="pop"id="pop3"></div>
                         </a>
-                        <a class="real" href="https://micka0675.github.io/sectionPaname/" target="blank">
+                        <a class="real" href="https://micka0675.github.io/MotusMobile/" target="blank">
                             <section id="blocSp"></section>
                             <div class="pop"id="pop4"></div>
                         </a>   
@@ -177,7 +179,7 @@
                     </div>
                     <div id="txtBase" class="txtBase">
                         <h3>Créer une Base de données</h3>
-                            <img src="images/sqlbase.png" id ="illuBig" alt="Data">
+                            <img src="images/sqlBase.png" id ="illuBig" alt="Data">
                         <p class="txtDesc">À partir d’une demande client nécessitant le stockage de données, organiser les données et définir un 
                             schéma physique. A l’aide d’un SGBD, écrire et exécuter le script de création de la base de données, 
                             insérer les données de test, définir les droits d'utilisation et prévoir les procédures de sauvegarde et de 
@@ -240,6 +242,11 @@
                 </article>
                 <footer>
                     <section id="centre" class="centre">
+                        <section id="logosBas" class="logosBas">
+                            <div class="reseaux"><a href="https://www.linkedin.com/in/mickael-roug%C3%A9-877090130" target="blank"><i class="fab fa-linkedin"></i></a></div>
+                            <div class="reseaux"><a href="https://github.com/Micka0675" target="blank"><i class="fab fa-github-square"></i></a></div>
+                            <div class="reseaux"><a href="https://codepen.io/Mickael0675" target="blank"><i class="fab fa-codepen"></i></a></div>
+                        </section>
                         <p>Design & Built by Mickaël Rougé, 2022.</p>
                     </section>
                 </footer>
